Fix phần hero-img sao cho ảnh luôn ở chân của hero-wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ a {
     display: flex;
     flex-direction: column;
     padding-top: 38px;
-    height: 100vh;
+    height: calc(100vh - 90px);
     background-color: #e6f0ff;
 }
 
